# jdlib

./: README.md
Jdlib/src/main/java/com/emaraic/jdlib/: Jdlib.java
examples/faces_clustering/: FacesClustering.java
examples/facial_landmarks/: FacialLandmardsExample.java
jni/: CMakeLists.txt
